# memo_dioxus

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: app.rs  define.rs  icon.rs  json.rs  main.rs  memo.rs  ui.rs
