[package]
name = "memo_dioxus"
version = "0.1.0"
authors = ["rv_tanaka <rv_tanaka@mediavision.co.jp>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.3", features = [] }
dirs = "5.0.1"
chrono = "0.4.38"
tokio = "1.40.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dialog = "0.3.0"
rm_rf = "0.6.2"
sysinfo = "0.32.0"
futures-util = "0.3.31"
native-dialog = "0.7.0"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
tao = "0.30.8"
image = "0.25.5"
global-hotkey = "0.6.3"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"

[profile.release]
opt-level = "s"       # サイズと速度のバランスを取る最適化
lto = "fat"           # 最大限のリンク時最適化を有効化
codegen-units = 1     # コード生成ユニットを減らし、最適化を強化
panic = "abort"       # panic 時に 'unwind' ではなく 'abort' を使用
strip = "symbols"     # シンボル情報を削除し、必要なデバッグ情報は保持
